fixing the delay when navigating, the problem was a broken transition animation.

--- a/app/views/shell.html
+++ b/app/views/shell.html
@@ -20,5 +20,5 @@
         </div>
     </div><!-- /.container-fluid -->
 </nav>
-<div class="page-host" data-bind="router: { transition:'entrance' }"></div>
+<div class="page-host" data-bind="router: { transition: false } "></div>
 
